# CMPE295A_Multi_Agent_SRE_Assistant

./: .env.example  .gitignore  Dockerfile  HOW_TO_RUN.md  PROJECT_EXPLANATION.md  README.md  mypy.ini  pyproject.toml  start.sh  stop.sh
SRE_Demo_App/: HOW_TO_RUN.md  architecture.md  docker-compose.yaml
SRE_Demo_App/monitoring/alertmanager/: alertmanager.yml
SRE_Demo_App/monitoring/loki/: loki.yml
SRE_Demo_App/monitoring/prometheus/: alerts.yml
SRE_Demo_App/services/checkout-service/: app.py
backend/: auth.py  crud.py  main.py  models.py  schemas.py  seed.py
backend/routers/: auth.py
dashboard/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/(auth)/login/: page.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/app/(dashboard)/clusters/[id]/: page.tsx
dashboard/app/(dashboard)/clusters/[id]/audit/: page.tsx
dashboard/components/dashboard/: AuditLogTable.tsx  IncidentCommandCenter.tsx  MetricSparklines.tsx  MissionControl.tsx
dashboard/components/ui/: scroll-area.tsx
docs/: MASTER_PROMPT.md
edge_agent/: .env.example  Dockerfile  README.md  docker-compose.yaml  edge_relay.py  start.sh  stop.sh
edge_agent/k8s/: mcp-k8s-rbac.yaml
edge_agent/mcp_servers/github_real/: Dockerfile
edge_agent/mcp_servers/k8s_real/: server.py
edge_agent/mcp_servers/notion_real/: Dockerfile
edge_agent/mcp_servers/prometheus_real/: Dockerfile
infrastructure/: docker-compose.yaml
infrastructure/k8s/: rbac.yaml
infrastructure/k8s/base/: kustomization.yaml  mcp.services.yaml  sre-agent.configmap.yaml
mcp_servers/github_real/: Dockerfile  server.py
mcp_servers/k8s_real/: Dockerfile  server.py
mcp_servers/memory_real/: Dockerfile  requirements.txt  server.py
mcp_servers/notion_real/: requirements.txt  server.py
mcp_servers/prometheus_real/: server.py
platform/: Dockerfile.dashboard  docker-compose.yaml  start.sh  stop.sh
platform/mcp_memory/: Dockerfile  server.py
scripts/: audit_runbooks.py  debug_notion.py  dedupe_runbooks.py  init_ollama.sh  k8s-apply.sh  kind-load.sh  seed_runbooks.py  verify_audit_logs.py  verify_zero_touch.py
sre_agent/: README.md  agent_nodes.py  agent_runtime.py  agent_state.py  constants.py  graph_builder.py  job_poller.py  llm_utils.py  mcp_tool_wrapper.py  multi_agent_langgraph.py  policy_engine.py  supervisor.py
sre_agent/api/v1/: agent_connect.py  alerts.py  clusters.py  incidents.py  jobs.py  mission_control.py
sre_agent/config/prompts/: github_agent_prompt.txt
